<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".alert.view.AlertDialog">


    <ImageView
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fromBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnFrom"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#2196F3"

        android:text="@string/btnTo"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarmTxtView"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:text="@string/datePicker"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="148dp"
        android:text="@string/btnSave"
        android:backgroundTint="#2196F3"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>