<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backearth"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#2196F3"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="450dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingTittle"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.429"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_layout"
        android:layout_width="411dp"
        android:layout_height="660dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        tools:context=".settings.SettingsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/settingLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/chooseLanguage"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroupLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingLanguage">

                    <RadioButton
                        android:id="@+id/settings_english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/english"
                        android:textColor="@color/white" />

                    <RadioButton

                        android:id="@+id/settings_arabic"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="@string/arabic"
                        android:textColor="@color/white" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginStart="32dp"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/chooseLocation"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroupLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <RadioButton

                        android:id="@+id/settings_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/gps"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/settings_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="@string/map"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                </RadioGroup>

                <ImageView
                    android:id="@+id/btnUpdateLocataion"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/location"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.104">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tempUnits"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.483"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroupUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <RadioButton
                        android:id="@+id/unit_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:checked="false"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/celsius"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/unit_fahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/fahrenhite"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/unit_kelvin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="@string/kelvin"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="183dp"
            android:background="@drawable/backgroud"
            app:cardBackgroundColor="#2196F3"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="152dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:buttonTint="@color/white"
                    android:text="@string/speedUnits"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/speedRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <RadioButton
                        android:id="@+id/mPerHRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:buttonTint="@color/white"
                        android:text="@string/m_h"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <RadioButton
                        android:id="@+id/mPerSRadioBtn"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/white"
                        android:text="@string/m_s"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="144dp"
            android:backgroundTint="#2196F3"
            android:text="@string/btnSave"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>